--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,10 @@
 name: WorldBorder
-author: Brettflan
+authors: [Esophose, Brettflan]
 description: Efficient, feature-rich plugin for limiting the size of your worlds.
-version: 1.9.10 (beta)
+version: '@version@'
 api-version: 1.13
 main: com.wimbli.WorldBorder.WorldBorder
-softdepend:
-  - dynmap
+softdepend: [dynmap]
 commands:
   wborder:
     description: Primary command for WorldBorder.
